# pai-deps

./: .dockerignore  AGENTS.md  Dockerfile  pyproject.toml
agents/: agent-guide.md
docker/: entrypoint.sh
just/check/: .just
just/docs/scripts/: markdown-lint.sh
just/package/scripts/: check_package_build_contracts.py  check_package_build_contracts_test.py
just/release/scripts/: check_docs_indices.py  check_docs_indices_test.py  check_index_manifests.py
pai_deps/: package_metadata.py  package_metadata_test.py
pai_deps/cli/: package_info.py  package_info_test.py
