# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "pai-deps"
version = "1.6.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "change-wheel-version",
    "tyro",
    "wheel-filename",
]

[project.scripts]
pai-deps-copy-release-assets = "pai_deps.cli.copy_release_assets:main"
pai-deps-create-index = "pai_deps.cli.create_index:cli"
pai-deps-fix-wheel = "pai_deps.cli.fix_wheel:cli"
pai-deps-package-info = "pai_deps.cli.package_info:main"

[project.optional-dependencies]
build = [
    "cmake",
    "ninja",
    "numpy",
    "packaging",
    "pip>=26.1.2",
    "setuptools",
    "wheel>=0.46.2",
]

[dependency-groups]
dev = [
    "numpy",
    "pyrefly>=1.0.0",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "torch==2.10.0+cu128",
]
legal = [
    "pip-licenses>=5.5.5",
]

[tool.uv.sources]
change-wheel-version = [{ git = "https://github.com/spectralflight/change_wheel_version.git", rev = "ae6432577b1b0c54af76d52e6328e214287f2db9" }]
torch = [{ index = "pytorch" }]

[tool.uv.audit]
# Suppress only no-fix PyTorch advisories. Strict audit runs with --no-config.
ignore-until-fixed = ["GHSA-rrmf-rvhw-rf47"]
# Temporary until the package locks can move to setuptools >=83.0.0.
ignore = ["PYSEC-2026-3447"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = [
    "pai_deps",
]

[tool.hatch.build.targets.wheel]
packages = [
    "pai_deps",
]
